--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -4,11 +4,11 @@
   tasks:
     - name: Install python pip
       apt:
-        name: python-pip
+        name: python3-pip
         state: present
     - name: Install docker
       apt:
-        name: docker
+        name: docker-ce
         state: present
     - name: start docker
       service:
@@ -17,7 +17,7 @@
         enabled: yes
     - name: Install docker-py python module
       pip:
-        name: docker-py
+        name: docker
         state: present
     - name: Start the container
       docker_container:
