--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -2,49 +2,27 @@
 - hosts: dev
   become: True
   tasks:
-    - name: Install python3 pip
+    - name: Install python pip
       apt:
         name: python3-pip
         state: present
-
-    - name: Install required dependencies for Docker
-      apt:
-        name: "{{ item }}"
-        state: present
-      with_items:
-        - apt-transport-https
-        - ca-certificates
-        - curl
-        - software-properties-common
-
-    - name: Add Docker's official GPG key
-      shell: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-
-    - name: Add Docker repository
-      apt_repository:
-        repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release | lower }} stable"
-        state: present
-
     - name: Install docker
       apt:
-        name: docker-ce
+        name: docker.io
         state: present
-
-    - name: Start Docker service
+    - name: start docker
       service:
         name: docker
         state: started
         enabled: yes
-
-    - name: Install docker python module
+    - name: Install docker-py python module
       pip:
-        name: docker
+        name: docker-py
         state: present
-
     - name: Start the container
       docker_container:
         name: hariapp
-        image: "kavindusamaranayake/hariapp:{{DOCKER_TAG}}"
+        image: "kavindusamaranayake/hariapp:{{DOCKER_TAG}}" 
         state: started
         published_ports:
           - 0.0.0.0:8080:8080
