--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -2,27 +2,37 @@
 - hosts: dev
   become: True
   tasks:
-    - name: Install python pip
+    - name: Update apt package cache
+      apt:
+        update_cache: yes
+
+    - name: Install python3-pip
       apt:
         name: python3-pip
         state: present
+        update_cache: yes
+
     - name: Install docker
       apt:
         name: docker.io
         state: present
-    - name: start docker
+        update_cache: yes
+
+    - name: Start Docker service
       service:
         name: docker
         state: started
         enabled: yes
+
     - name: Install docker-py python module
       pip:
-        name: docker-py
+        name: docker
         state: present
+
     - name: Start the container
       docker_container:
         name: hariapp
-        image: "kavindusamaranayake/hariapp:{{DOCKER_TAG}}" 
+        image: "kavindusamaranayake/hariapp:{{DOCKER_TAG}}"
         state: started
         published_ports:
           - 0.0.0.0:8080:8080
