--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -24,10 +24,12 @@
         state: started
         enabled: yes
 
-    - name: Install docker-py python module
-      pip:
-        name: docker
+    - name: Install docker-py python package via apt
+      ansible.builtin.apt:
+        name: python3-docker
         state: present
+        update_cache: yes
+
 
     - name: Start the container
       docker_container:
